fix close button wrapping for tags

--- a/public/stylesheets/autoSuggest.css
+++ b/public/stylesheets/autoSuggest.css
@@ -32,8 +32,9 @@ ul.as-selections li.as-selection-item {
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ddeefe), to(#bfe0f1));
 	border: 1px solid #acc3ec;
 	border-top-color: #c0d9e9;
-	padding: 2px 7px 2px 10px;
+	padding: 2px 17px 2px 10px;
 	border-radius: 12px;
+	position:relative;
 	-webkit-border-radius: 12px;
 	-moz-border-radius: 12px;
 	box-shadow: 0 1px 1px #e4edf2;
@@ -46,8 +47,10 @@ ul.as-selections li.as-selection-item:last-child {
 }
 
 ul.as-selections li.as-selection-item a.as-close {
-	float: right;
-	margin: 1px 0 0 7px;
+	position:absolute;
+	right: 3px;
+	top: 2px;
+	margin: 0;
 	padding: 0 2px;
 	cursor: pointer;
 	color: #5491be;
@@ -159,20 +162,20 @@ li.as-result-item.active {
 	text-shadow: 0 1px 2px #122042;
 }
 
-li.as-result-item em { 
-	font-style: normal; 
-	background: #444;  
+li.as-result-item em {
+	font-style: normal;
+	background: #444;
 	padding: 0 2px;
 	color: #fff;
 }
 
-li.as-result-item.active em { 
-	background: #253f7a;  
+li.as-result-item.active em {
+	background: #253f7a;
 	color: #fff;
 }
 
 /* Webkit Hacks  */
-@media screen and (-webkit-min-device-pixel-ratio:0) {	
+@media screen and (-webkit-min-device-pixel-ratio:0) {
 	ul.as-selections {
 		border-top-width: 2px;
 	}
@@ -209,7 +212,7 @@ ul.as-selections li.as-selection-item a.as-close {
 }
 
 /* Firefox 3.0 Hacks */
-ul.as-list,  x:-moz-any-link, x:default { 
+ul.as-list,  x:-moz-any-link, x:default {
 	border: 1px solid #888;
 }
 BODY:first-of-type ul.as-list, x:-moz-any-link, x:default { /* Target FF 3.5+ */
